second contact: this is a thing now

--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
                   <li><a href="mission.html">Our Mission, Vision and Core Values</a></li>
                 </ul>
               </li>
-              <li><a href="causes.html">Charity Causes</a>
+              <li><a href="causes.html">Causes</a>
               <li><a href="#">Volunteer</a>
                 <ul class="dropdown">
                   <li><a href="events.html">Events</a></li>
@@ -163,9 +163,9 @@
         <div class="row">
           <div class="col-sm-12 col-md-5">
             <h3 class="text-theme-colored text-uppercase mt-0">About Us</h3>
-            <p>Mindset initiative is an initiative which is seeking to change the mindsets of Africans, enhance growth and solidify unity among Africans by having a common positive ideology to the solutions of the ever soaring problems that have cast Africa in a rabbit hole of under development, poverty and inferiority which have been caused by various forms of mindset control.</p>
+            <p>Mindset Initiative is an organisation which is seeking to change the mindsets of Africans, enhance growth and solidify unity among Africans by having a common positive ideology to the solutions of the ever soaring problems that have cast Africa in a rabbit hole of under development, poverty and inferiority which have been caused by various forms of mindset control.</p>
             <br>
-            We were founded Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis voluptate cumque eius asperiores maxime dicta tenetur voluptas laboriosam fuga. Porro cumque corporis consequatur numquam consectetur beatae cum officia odit quaerat!
+            Founded in 2018 and fully in cooperated in 2019 as accompany limited by guarantee with ten members and also looking at employing more than 50 members, mindset initiative is an organization focusing on changing the mindsets of the African people, enhance growth within communities and solidifying unity among Africans.
             <!-- <div class="row mt-20 mb-30 ml-20">
               <h5 class="text-theme-colored">
                 We cover the following areas
@@ -249,7 +249,7 @@
                 <div class="title-icon">
                   <i class="flaticon-charity-hand-holding-a-heart"></i>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem autem<br> voluptatem obcaecati!</p>
+                <p>Meet our team of yound and dedicated superstars</p>
               </div>
             </div>
           </div>
@@ -260,8 +260,8 @@
                   <div class="thumb"><img alt="" src="images/steven.jpg" class="img-fullwidth"></div>
                   <div class="info">
                     <h4 class="name"><a href="#">Steven Ruhuma</a></h4>
-                    <h6 class="occupation">Management</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit dictum nobis.</p>
+                    <h6 class="occupation">Co-Founder/Directpr</h6>
+                    <p>My commitment to truth, unity and love of the diversified cultures on my continent with a strong desire to see the African continent as the leading economy .</p>
                     <hr>
                     <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -273,11 +273,11 @@
               </div>
               <div class="col-sm-6 col-md-3 mb-sm-60 text-left sm-text-center">
                 <div class="volunteer border bg-white-fa maxwidth400 p-30">
-                  <div class="thumb"><img alt="" src="images/steven.jpg" class="img-fullwidth"></div>
+                  <div class="thumb"><img alt="" src="images/0/members/samuel.jpg" class="img-fullwidth" style="height: 200px !important; object-fit: cover;"></div>
                   <div class="info">
-                    <h4 class="name"><a href="#">Steven Ruhuma</a></h4>
-                    <h6 class="occupation">Management</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit dictum nobis.</p>
+                    <h4 class="name"><a href="#">Mwijukye Samuel</a></h4>
+                    <h6 class="occupation">Co-founder/Head operations and coordination</h6>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate quasi praesentium corporis possimus quibusdam nemo placeat qui fugiat</p>
                     <hr>
                     <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -289,11 +289,27 @@
               </div>
               <div class="col-sm-6 col-md-3 mb-sm-60 text-left sm-text-center">
                 <div class="volunteer border bg-white-fa maxwidth400 p-30">
-                  <div class="thumb"><img alt="" src="images/steven.jpg" class="img-fullwidth"></div>
+                  <div class="thumb"><img alt="" src="images/0/members/monday-william.png" class="img-fullwidth" style="height: 200px !important; object-fit: cover;"></div>
                   <div class="info">
-                    <h4 class="name"><a href="#">Steven Ruhuma</a></h4>
-                    <h6 class="occupation">Management</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit dictum nobis.</p>
+                    <h4 class="name"><a href="#">Monday William</a></h4>
+                    <h6 class="occupation">Co-founder/HR AND ADMIN</h6>
+                    <p>Lack of a growth mindset within African socities has casued a lot of problems within us, therefore with the change I would like to bring to communities of development and solidify unity amongst us africans </p>
+                    <hr>
+                    <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
+                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-3 mb-60 text-left sm-text-center">
+                <div class="volunteer border bg-white-fa maxwidth400 p-30">
+                  <div class="thumb"><img alt="" src="images/0/members/melody.png" class="img-fullwidth" style="height: 200px !important; object-fit: cover;"></div>
+                  <div class="info">
+                    <h4 class="name"><a href="#">KAYODI MELODY MERCY</a></h4>
+                    <h6 class="occupation">HEAD STRATEGIC PLANNING</h6>
+                    <p>The communication gap between the elderly and the younger people today has cost development so much in the face of the rapid changing world</p>
                     <hr>
                     <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -305,11 +321,11 @@
               </div>
               <div class="col-sm-6 col-md-3 mb-sm-60 text-left sm-text-center">
                 <div class="volunteer border bg-white-fa maxwidth400 p-30">
-                  <div class="thumb"><img alt="" src="images/steven.jpg" class="img-fullwidth"></div>
+                  <div class="thumb"><img alt="" src="images/0/members/ayebare.png" class="img-fullwidth" style="height: 200px !important; object-fit: cover;"></div>
                   <div class="info">
-                    <h4 class="name"><a href="#">Steven Ruhuma</a></h4>
-                    <h6 class="occupation">Management</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit dictum nobis.</p>
+                    <h4 class="name"><a href="#">Ayebale Walter</a></h4>
+                    <h6 class="occupation">Secondary Schools Cordinator</h6>
+                    <p>We joined the cause of mindset initiative to develop our talents and use them to build our new Africa we would like to leave in basing on our talents.</p>
                     <hr>
                     <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -324,14 +340,14 @@
         </div>
       </section>
 
-    <!-- divider: Became a Volunteers -->
+    <!-- divider: Become a Volunteers -->
     <section class="divider parallax layer-overlay overlay-deep" data-stellar-background-ratio="0.5" data-bg-img="images/blur_bg.jpg">
       <div class="container">
         <div class="section-content">
           <div class="row">
             <div class="col-md-7">
               <h3 class="line-bottom">Become a Volunteer</h3>
-              <p class="mt-30 mb-30">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, et placeat ipsam, officiis fugiat doloremque ducimus tempore aliquid nihil soluta, quia similique veritatis! Quidem, repellendus exit placeat ipsam, officiis fugiat doloremque ducimus tempore aliquid nihil soluta, quia similique veritatis.</p>
+              <p class="mt-30 mb-30">Become part of the revolution to change the mindset of Africans and foster growth in the economy by supporting our initiative. We are a youth driven organisation with the drive towards a better African Future economically, mentally and spiritually.</p>
               <a class="btn btn-dark btn-theme-colored btn-lg btn-flat pull-left pl-30 pr-30" href="#">Join Us</a>
             </div>
             <div class="col-md-5">
@@ -374,8 +390,8 @@
       <div class="row multi-row-clearfix">
         <div class="col-sm-6 col-md-3">
           <div class="widget dark"> <img alt="" src="images/FINAL CORRECTED LOGO.png">
-            <p class="font-12 mt-10 mb-10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quam iste explicabo cupiditate sapiente, delectus at? Aliquam inventore, vero eos animi quae corporis soluta incidunt. Fugit quia laboriosam provident tenetur.</p>
-            <a class="btn btn-default btn-transparent btn-xs btn-flat mt-5" href="#">Read more</a>
+            <p class="font-12 mt-10 mb-10">Mindset initiative is to have a common positive ideology as Africans towards Africa to the solutions of saving our generational minds and create a renewed Africa.</p>
+            <!-- <a class="btn btn-default btn-transparent btn-xs btn-flat mt-5" href="#">Read more</a> -->
             <ul class="styled-icons icon-sm icon-bordered icon-circled clearfix mt-20">
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -389,12 +405,12 @@
           <div class="widget dark">
             <h5 class="widget-title line-bottom">Pages</h5>
             <ul class="list-border list theme-colored angle-double-right">
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Donor Privacy Policy</a></li>
-              <li><a href="#">Disclaimer</a></li>
-              <li><a href="#">Terms of Use</a></li>
-              <li><a href="#">Copyright Notice</a></li>
-              <li><a href="#">Media Center</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="events.html">Events</a></li>
+              <li><a href="mission.html">Our Mission</a></li>
+              <li><a href="how-works.html">How it works</a></li>
+              <li><a href="causes.html">Causes</a></li>
             </ul>
           </div>
         </div>
@@ -402,12 +418,12 @@
           <div class="widget dark">
             <h5 class="widget-title line-bottom">Quick Links</h5>
             <ul class="list-border list theme-colored angle-double-right">
+              <li><a href="join-us.html">Join Us</a></li>
+              <li><a href="#">Publications</a></li>
+              <li><a href="#">Make a donation</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
               <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Donor Privacy Policy</a></li>
-              <li><a href="#">Disclaimer</a></li>
               <li><a href="#">Terms of Use</a></li>
-              <li><a href="#">Copyright Notice</a></li>
-              <li><a href="#">Media Center</a></li>
             </ul>
           </div>
         </div>
