--- a/events.html
+++ b/events.html
@@ -159,7 +159,7 @@
                   <li><a href="mission.html">Our Mission, Vision and Core Values</a></li>
                 </ul>
               </li>
-              <li><a href="causes.html">Charity Causes</a>
+              <li><a href="causes.html">Causes</a>
               <li class="active"><a href="#">Volunteer</a>
                 <ul class="dropdown">
                   <li><a href="events.html">Events</a></li>
