--- a/how-works.html
+++ b/how-works.html
@@ -120,7 +120,7 @@
                   <li><a href="mission.html">Our Mission, Vision and Core Values</a></li>
                 </ul>
               </li>
-              <li><a href="causes.html">Charity Causes</a>
+              <li><a href="causes.html">Causes</a>
               <li><a href="#">Volunteer</a>
                 <ul class="dropdown">
                   <li><a href="events.html">Events</a></li>
@@ -166,30 +166,33 @@
             <div class="col-md-7">
               <h4 class="m-0">The work of</h4>
               <h2 class="title text-theme-colored mt-0">Mindset Initiative</h2>
-              <p class="mb-10">Lorem ipsum dolor sit amet, doloremque suscipit consectetur adipisicing elit. Corporis voluptatibus neque, assumenda maxime. Eaque libero unde corrupti deleniti maxime ratione doloremque suscipit deleniti maxime ratione doloremque suscipit perferendis voluptatibus neque, assumenda maxime aperiam labore debitis atque odit neque possimus optio quo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere excepturi praesentium voluptate odio adipisci nam totam tempore nemo, corporis mollitia. Fugit veritatis dicta saepe. Maiores rem ab sunt? Facere, pariatur.</p>
+              <p class="mb-10">Mindset initiative has developed programs that will be implemented for it to achieve or provide a solution to saving the generational minds, the geographical interest for mindset initiative is the African continent as whole thou with its first point of interest to be Uganda.
+                <br>
+                Mindset initiative programs will be focusing on talent development, education, leadership, wealth and resources, certainty of God’s word, building an e-research institute, and also having regional clusters, these programs will not be running at the same time but one leading to the other respectively
+              </p>
   
-              <h4 class="mt-20 mb-5 text-theme-colored">Our Services</h4>
+              <h4 class="mt-20 mb-5 text-theme-colored">Our Causes</h4>
               <div class="row mt-20 mb-30 ml-20">
                 
                 <div class="col-xs-6">
                 <ul class="mt-10">
                   <li class="mb-10"><i class="fa fa-check-circle text-theme-colored"></i>&emsp;Education</li>
-                  <li class="mb-10"><i class="fa fa-check-circle text-theme-colored"></i>&emsp;Regional Clusters</li>
-                  <li class="mb-10"><i class="fa fa-check-circle text-theme-colored"></i>&emsp;Helping the Eldery</li>
+                  <li class="mb-10"><i class="fa fa-check-circle text-theme-colored"></i>&emsp;Regional Health Clusters</li>
+                  <li class="mb-10"><i class="fa fa-check-circle text-theme-colored"></i>&emsp;Culture and Traditional</li>
                 </ul>
                </div>
                <div class="col-xs-6">
                 <ul class="mt-10">
                   <li class="mb-10"><i class="fa fa-check-circle text-theme-colored"></i>&emsp;Leadership</li>
                   <li class="mb-10"><i class="fa fa-check-circle text-theme-colored"></i>&emsp;Wealth Creation</li>
-                  <li class="mb-10"><i class="fa fa-check-circle text-theme-colored"></i>&emsp;eResearch Institute</li>
+                  <li class="mb-10"><i class="fa fa-check-circle text-theme-colored"></i>&emsp;Talent and Development</li>
                 </ul>
                </div>
               </div>
             </div>
             <div class="col-md-5">
               <div class="thumb mt-5">
-                <img alt="" src="images/blur_bg.jpg" class="img-fullwidth">
+                <img alt="" src="images/0/mental social support/IMG_20200709_102447.jpg" class="img-fullwidth">
               </div>
               <h4 class="mt-20 mb-5 text-capitalize">Our Works reach thousands</h4>
               <p>
@@ -225,7 +228,7 @@
                   <i class="fa fa-magic font-30 text-theme-colored"></i>
                 </a>
                 <h4 class="icon-box-title"><a href="#">Join to a new campaign</a></h4>
-                <p class="text-gray">Lorem ipsum dolor sit amet consecte adipisicing elit. Molestias nnulla placeat, odioqui dict</p>
+                <p class="text-gray">Signup and Join an existing outreach campaign in the Organisation</p>
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 pb-sm-20">
@@ -234,7 +237,7 @@
                   <i class="fa fa-globe font-30 text-theme-colored"></i>
                 </a>
                 <h4 class="icon-box-title"><a href="#">Discover</a></h4>
-                <p class="text-gray">Lorem ipsum dolor sit amet consecte adipisicing elit. Molestias nnulla placeat, odioqui dict</p>
+                <p class="text-gray">Discover the tasks and activities involved in the chosen campaign</p>
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 pb-sm-20">
@@ -243,7 +246,7 @@
                   <i class="fa fa-life-ring font-30 text-theme-colored"></i>
                 </a>
                 <h4 class="icon-box-title"><a href="#">Support</a></h4>
-                <p class="text-gray">Lorem ipsum dolor sit amet consecte adipisicing elit. Molestias nnulla placeat, odioqui dict</p>
+                <p class="text-gray">Take part in the vhosen campaign or reach out through donation</p>
               </div>
             </div>
           </div>
@@ -251,14 +254,14 @@
       </div>
     </section>
 
-     <!-- divider: Became a Volunteers -->
+     <!-- divider: Become a Volunteers -->
      <section class="divider parallax layer-overlay overlay-deep" data-stellar-background-ratio="0.5" data-bg-img="http://placehold.it/1920x1280">
         <div class="container">
           <div class="section-content">
             <div class="row">
               <div class="col-md-7">
-                <h3 class="line-bottom">Became a Volunteer</h3>
-                <p class="mt-30 mb-30">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, et placeat ipsam, officiis fugiat doloremque ducimus tempore aliquid nihil soluta, quia similique veritatis! Quidem, repellendus exit placeat ipsam, officiis fugiat doloremque ducimus tempore aliquid nihil soluta, quia similique veritatis.</p>
+                <h3 class="line-bottom">Become a Volunteer</h3>
+                <p class="mt-30 mb-30">Become part of the revolution to change the mindset of Africans and foster growth in the economy by supporting our initiative. We are a youth driven organisation with the drive towards a better African Future economically, mentally and spiritually</p>
                 <a class="btn btn-dark btn-theme-colored btn-lg btn-flat pull-left pl-30 pr-30" href="#">Join Us</a>
               </div>
               <div class="col-md-5">
@@ -298,8 +301,8 @@
       <div class="row multi-row-clearfix">
         <div class="col-sm-6 col-md-3">
           <div class="widget dark"> <img alt="" src="images/FINAL CORRECTED LOGO.png">
-            <p class="font-12 mt-10 mb-10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quam iste explicabo cupiditate sapiente, delectus at? Aliquam inventore, vero eos animi quae corporis soluta incidunt. Fugit quia laboriosam provident tenetur.</p>
-            <a class="btn btn-default btn-transparent btn-xs btn-flat mt-5" href="#">Read more</a>
+            <p class="font-12 mt-10 mb-10">Mindset initiative is to have a common positive ideology as Africans towards Africa to the solutions of saving our generational minds and create a renewed Africa.</p>
+            <!-- <a class="btn btn-default btn-transparent btn-xs btn-flat mt-5" href="#">Read more</a> -->
             <ul class="styled-icons icon-sm icon-bordered icon-circled clearfix mt-20">
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -314,11 +317,11 @@
             <h5 class="widget-title line-bottom">Pages</h5>
             <ul class="list-border list theme-colored angle-double-right">
               <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">Who we are</a></li>
-              <li><a href="blog.html">Publications</a></li>
-              <li><a href="causes.html">Charity Causes</a></li>
+              <li><a href="about.html">About</a></li>
               <li><a href="events.html">Events</a></li>
-              <li><a href="how-works.html">How Mindset Initiative Works</a></li>
+              <li><a href="mission.html">Our Mission</a></li>
+              <li><a href="how-works.html">How it works</a></li>
+              <li><a href="causes.html">Causes</a></li>
             </ul>
           </div>
         </div>
@@ -326,12 +329,12 @@
           <div class="widget dark">
             <h5 class="widget-title line-bottom">Quick Links</h5>
             <ul class="list-border list theme-colored angle-double-right">
-              <li><a href="#">Contact Us</a></li>
+              <li><a href="join-us.html">Join Us</a></li>
+              <li><a href="#">Publications</a></li>
+              <li><a href="#">Make a donation</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
               <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Donor Privacy Policy</a></li>
-              <li><a href="#">Disclaimer</a></li>
               <li><a href="#">Terms of Use</a></li>
-              <li><a href="#">Copyright Notice</a></li>
             </ul>
           </div>
         </div>
