--- a/images/index-mp-layout2.html
+++ b/images/index-mp-layout2.html
@@ -1916,7 +1916,7 @@
             </div>
           </div>
           <div class="col-sm-12 col-md-4">
-            <h4 class="text-uppercase line-bottom mt-0">Became a Volunteer</h4>
+            <h4 class="text-uppercase line-bottom mt-0">Become a Volunteer</h4>
             <div class="volunteer-wrapper border-bottom sm-maxwidth500 clearfix pb-15 mb-sm-30">
               <div class="fluid-video-wrapper">
                 <iframe src="//player.vimeo.com/video/22029657?title=0&amp;byline=0&amp;portrait=0" height="210"  title="Volunteer policy" allowfullscreen></iframe>
