--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                   <li><a href="mission.html">Our Mission, Vision and Core Values</a></li>
                 </ul>
               </li>
-              <li><a href="causes.html">Charity Causes</a>
+              <li><a href="causes.html">Causes</a>
               <li><a href="#">Volunteer</a>
                 <ul class="dropdown">
                   <li><a href="events.html">Events</a></li>
@@ -605,8 +605,8 @@
           <div class="col-md-7">
             <h4 class="m-0">Welcome to</h4>
             <h2 class="title text-theme-colored mt-0">Mindset Initiative</h2>
-            <p class="mb-10">Mindset initiative is an initiative which is seeking to change the mindsets of Africans, enhance growth and solidify unity among Africans by having a common positive ideology to the solutions of the ever soaring problems that have cast Africa in a rabbit hole of under development, poverty and inferiority which have been caused by various forms of mindset control.</p>
-            <p class="mb-10">Therefore Africa mindset initiative is to cultivate a renewed mindset of Africans with an approach of pan Africanism, centralization, prosperity, equality, ethnicity, and commitment to truth, unity and love, which will germinate a fruit of Africans who appreciate their diversity, beauty, wealth and resources.</p>
+            <p class="mb-10">Mindset Initiative is an organisation which is seeking to change the mindsets of Africans, enhance growth and solidify unity among Africans by having a common positive ideology to the solutions of the ever soaring problems that have cast Africa in a rabbit hole of under development, poverty and inferiority which have been caused by various forms of mindset control.</p>
+            <p class="mb-10">Therefore Mindset Initiative Africa is to cultivate a renewed mindset of Africans with an approach of pan Africanism, centralization, prosperity, equality, ethnicity, and commitment to truth, unity and love, which will germinate a fruit of Africans who appreciate their diversity, beauty, wealth and resources.</p>
 
             <!-- <h4 class="mt-20 mb-5">Our Services</h4>
             <ul class="list theme-colored angle-double-right mb-sm-30">
@@ -778,8 +778,8 @@
                     </div>
                   </div> -->
                   <div class="causes-details clearfix border-bottom p-15 pt-10">
-                    <h5 class="text-uppercase"><a href="#" class="text-theme-colored">Eldery Support</a></h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa quia in error laboriosam pariatur soluta est consequatur possimus voluptatibus, voluptderit..</p>
+                    <h5 class="text-uppercase"><a href="#" class="text-theme-colored">Regional Health Clusters</a></h5>
+                    <p>Provision of care bundles and mental support to the elderly in the Village. We have made sure to avail health support in hard to reach places, provided social support and conducted training on NDCs (Non Communicable diseases)</p>
                      <div class="donate-details">
                        <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Donate</a>
                        <!-- <ul class="pull-right list-inline mt-15">
@@ -794,12 +794,12 @@
             </div>
           </div>
           <div class="col-sm-12 col-md-4">
-            <h4 class="text-uppercase line-bottom mt-0">Became a Volunteer</h4>
+            <h4 class="text-uppercase line-bottom mt-0">Become a Volunteer</h4>
             <div class="volunteer-wrapper border-bottom sm-maxwidth500 clearfix pb-15 mb-sm-30">
               <div class="fluid-video-wrapper">
                 <iframe src="//player.vimeo.com/video/22029657?title=0&amp;byline=0&amp;portrait=0" height="210"  title="Volunteer policy" allowfullscreen aria-placeholder="images/blur_bg.jpg"></iframe>
               </div>
-              <p class="mb-10 mt-15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quos aspernatur cupiditate commodi sunt illo, dolorum iste molestias.</p>
+              <p class="mb-10 mt-15">Become part of the revolution to change the mindset of Africans and foster growth in the economy by supporting our initiative. We are a youth driven organisation with the drive towards a better African Future economically, mentally and spiritually</p>
               <p>
                 <a href="#" class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10">Join Us</a>
                 <span class="pull-right ml-10 mt-12 font-14">volunteers</span>
@@ -829,60 +829,8 @@
                   <div class="col-xs-3 pr-0">
                     <div class="event-date text-center">
                       <ul>
-                        <li class="font-36 text-theme-colored font-weight-700">28</li>
-                        <li class="font-20 text-center text-uppercase">Feb</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="event media sm-maxwidth400 p-15 mt-0 mb-15">
-                <div class="row">
-                  <div class="col-xs-3 p-0">
-                    <div class="thumb pl-15">
-                      <img alt="..." src="images/blur_bg.jpg" class="media-object">
-                    </div>
-                  </div>
-                  <div class="col-xs-6 p-0 pl-15">
-                    <div class="event-content">
-                      <h5 class="media-heading text-uppercase"><a href="#">Gear up for giving</a></h5>
-                      <ul>
-                        <li><i class="fa fa-clock-o"></i> at 5.00 pm - 7.30 pm</li>
-                        <li> <i class="fa fa-map-marker"></i> 25 Kampala.</li>
-                      </ul>                    
-                    </div>                
-                  </div>
-                  <div class="col-xs-3 pr-0">
-                    <div class="event-date text-center">
-                      <ul>
-                        <li class="font-36 text-theme-colored font-weight-700">28</li>
-                        <li class="font-20 text-center text-uppercase">Feb</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="event media sm-maxwidth400 p-15 mt-0 mb-15">
-                <div class="row">
-                  <div class="col-xs-3 p-0">
-                    <div class="thumb pl-15">
-                      <img alt="..." src="images/blur_bg.jpg" class="media-object">
-                    </div>
-                  </div>
-                  <div class="col-xs-6 p-0 pl-15">
-                    <div class="event-content">
-                      <h5 class="media-heading text-uppercase"><a href="#">Gear up for giving</a></h5>
-                      <ul>
-                        <li><i class="fa fa-clock-o"></i> at 5.00 pm - 7.30 pm</li>
-                        <li> <i class="fa fa-map-marker"></i> 25 Kampala.</li>
-                      </ul>                    
-                    </div>                
-                  </div>
-                  <div class="col-xs-3 pr-0">
-                    <div class="event-date text-center">
-                      <ul>
-                        <li class="font-36 text-theme-colored font-weight-700">28</li>
-                        <li class="font-20 text-center text-uppercase">Feb</li>
+                        <li class="font-36 text-theme-colored font-weight-700">-</li>
+                        <li class="font-20 text-center text-uppercase">TBD</li>
                       </ul>
                     </div>
                   </div>
@@ -908,7 +856,7 @@
               <div class="title-icon">
                 <i class="flaticon-charity-hand-holding-a-heart"></i>
               </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem autem<br> voluptatem obcaecati!</p>
+              <p>Been there done that. Our works speak volumes for themselves.</p>
             </div>
           </div>
         </div>
@@ -1126,11 +1074,11 @@
               <div class="testimonial-carousel owl-nav-top">
                 <div class="item">
                   <div class="testimonial-wrapper text-center">
-                    <div class="thumb"><img class="img-circle" alt="" src="images/steven.jpg"></div>
+                    <div class="thumb"><img class="img-circle" alt="" src="images/0/2.jpg"></div>
                     <div class="content pt-10">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum feugiat turpis nec leo pellentesque tincidunt adipiscing elit.</p>
+                      <p>It is really a life changing moment for anyone who reaches out and sees the works that Mindset initiative is doing for the people in small viallges of Uganda</p>
                       <i class="fa fa-quote-right font-36 mt-10 text-gray-lightgray"></i>
-                      <h5 class="author text-theme-colored mb-0">Jeff Reeves</h5>
+                      <h5 class="author text-theme-colored mb-0">Ann Reeves</h5>
                       <h6 class="title text-gray mt-0 mb-15">Donor</h6>
                     </div>
                   </div>
@@ -1250,8 +1198,8 @@
       <div class="row multi-row-clearfix">
         <div class="col-sm-6 col-md-3">
           <div class="widget dark"> <img alt="" src="images/FINAL CORRECTED LOGO.png">
-            <p class="font-12 mt-10 mb-10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quam iste explicabo cupiditate sapiente, delectus at? Aliquam inventore, vero eos animi quae corporis soluta incidunt. Fugit quia laboriosam provident tenetur.</p>
-            <a class="btn btn-default btn-transparent btn-xs btn-flat mt-5" href="#">Read more</a>
+            <p class="font-12 mt-10 mb-10">Mindset initiative is to have a common positive ideology as Africans towards Africa to the solutions of saving our generational minds and create a renewed Africa.</p>
+            <!-- <a class="btn btn-default btn-transparent btn-xs btn-flat mt-5" href="#">Read more</a> -->
             <ul class="styled-icons icon-sm icon-bordered icon-circled clearfix mt-20">
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -1265,12 +1213,12 @@
           <div class="widget dark">
             <h5 class="widget-title line-bottom">Pages</h5>
             <ul class="list-border list theme-colored angle-double-right">
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Donor Privacy Policy</a></li>
-              <li><a href="#">Disclaimer</a></li>
-              <li><a href="#">Terms of Use</a></li>
-              <li><a href="#">Copyright Notice</a></li>
-              <li><a href="#">Media Center</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="events.html">Events</a></li>
+              <li><a href="mission.html">Our Mission</a></li>
+              <li><a href="how-works.html">How it works</a></li>
+              <li><a href="causes.html">Causes</a></li>
             </ul>
           </div>
         </div>
@@ -1278,12 +1226,12 @@
           <div class="widget dark">
             <h5 class="widget-title line-bottom">Quick Links</h5>
             <ul class="list-border list theme-colored angle-double-right">
+              <li><a href="join-us.html">Join Us</a></li>
+              <li><a href="#">Publications</a></li>
+              <li><a href="#">Make a donation</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
               <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Donor Privacy Policy</a></li>
-              <li><a href="#">Disclaimer</a></li>
               <li><a href="#">Terms of Use</a></li>
-              <li><a href="#">Copyright Notice</a></li>
-              <li><a href="#">Media Center</a></li>
             </ul>
           </div>
         </div>
