--- a/join-us.html
+++ b/join-us.html
@@ -120,7 +120,7 @@
                   <li><a href="mission.html">Our Mission, Vision and Core Values</a></li>
                 </ul>
               </li>
-              <li><a href="causes.html">Charity Causes</a>
+              <li><a href="causes.html">Causes</a>
               <li class="active"><a href="#">Volunteer</a>
                 <ul class="dropdown">
                   <li><a href="events.html">Events</a></li>
@@ -297,7 +297,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">Who we are</a></li>
               <li><a href="blog.html">Publications</a></li>
-              <li><a href="causes.html">Charity Causes</a></li>
+              <li><a href="causes.html">Causes</a></li>
               <li><a href="events.html">Events</a></li>
               <li><a href="how-works.html">How Mindset Initiative Works</a></li>
             </ul>
