--- a/mission.html
+++ b/mission.html
@@ -119,7 +119,7 @@
                   <li><a href="mission.html">Our Mission, Vision and Goals</a></li>
                 </ul>
               </li>
-              <li><a href="causes.html">Charity Causes</a>
+              <li><a href="causes.html">Causes</a>
               <li><a href="#">Volunteer</a>
                 <ul class="dropdown">
                   <li><a href="events.html">Events</a></li>
@@ -209,8 +209,8 @@
                 </div>
               </div>
             <p class="text-center m-lg-50">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ad aut odio fugit eius adipisci explicabo voluptatem nihil? Cupiditate asperiores consequatur placeat, doloremque omnis dolore vel officiis facilis eaque harum!
-            </p>
+                <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ad aut odio fugit eius adipisci explicabo voluptatem nihil? Cupiditate asperiores consequatur placeat, doloremque omnis dolore vel officiis facilis eaque harum!
+            </p> -->
             </div>
             <div class="section-content mt-30 container">
                 <div class="row">
@@ -304,9 +304,9 @@
                     <h3 class="mt-0 text-theme-colored text-uppercase">Our Values</h3>
                   </div>
                 </div>
-              <p class="text-center m-lg-50">
+              <!-- <p class="text-center m-lg-50">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ad aut odio fugit eius adipisci explicabo voluptatem nihil? Cupiditate asperiores consequatur placeat, doloremque omnis dolore vel officiis facilis eaque harum!
-              </p>
+              </p> -->
               </div>
               <div class="section-content mt-30 container">
                   <div class="row">
@@ -439,8 +439,8 @@
       <div class="row multi-row-clearfix">
         <div class="col-sm-6 col-md-3">
           <div class="widget dark"> <img alt="" src="images/FINAL CORRECTED LOGO.png">
-            <p class="font-12 mt-10 mb-10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quam iste explicabo cupiditate sapiente, delectus at? Aliquam inventore, vero eos animi quae corporis soluta incidunt. Fugit quia laboriosam provident tenetur.</p>
-            <a class="btn btn-default btn-transparent btn-xs btn-flat mt-5" href="#">Read more</a>
+            <p class="font-12 mt-10 mb-10">Mindset initiative is to have a common positive ideology as Africans towards Africa to the solutions of saving our generational minds and create a renewed Africa.</p>
+            <!-- <a class="btn btn-default btn-transparent btn-xs btn-flat mt-5" href="#">Read more</a> -->
             <ul class="styled-icons icon-sm icon-bordered icon-circled clearfix mt-20">
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -455,11 +455,11 @@
             <h5 class="widget-title line-bottom">Pages</h5>
             <ul class="list-border list theme-colored angle-double-right">
               <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">Who we are</a></li>
-              <li><a href="blog.html">Publications</a></li>
-              <li><a href="causes.html">Charity Causes</a></li>
+              <li><a href="about.html">About</a></li>
               <li><a href="events.html">Events</a></li>
-              <li><a href="how-works.html">How Mindset Initiative Works</a></li>
+              <li><a href="mission.html">Our Mission</a></li>
+              <li><a href="how-works.html">How it works</a></li>
+              <li><a href="causes.html">Causes</a></li>
             </ul>
           </div>
         </div>
@@ -467,12 +467,12 @@
           <div class="widget dark">
             <h5 class="widget-title line-bottom">Quick Links</h5>
             <ul class="list-border list theme-colored angle-double-right">
-              <li><a href="#">Contact Us</a></li>
+              <li><a href="join-us.html">Join Us</a></li>
+              <li><a href="#">Publications</a></li>
+              <li><a href="#">Make a donation</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
               <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Donor Privacy Policy</a></li>
-              <li><a href="#">Disclaimer</a></li>
               <li><a href="#">Terms of Use</a></li>
-              <li><a href="#">Copyright Notice</a></li>
             </ul>
           </div>
         </div>
